# mx-master-linux

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
config/: example.yaml
mx_master/: __init__.py  __main__.py  actions.py  auto_scroll.py  config.py  daemon.py  device.py  evdev_listener.py  hidpp.py
systemd/: mx-master.service
udev/: 99-mx-master.rules
